<resources>
    <string name="app_name">MarkdownNote</string>
    <string name="initNote">我的第一条Markdown笔记！</string>
    <string name="add">添加我的Markdown笔记</string>
    <string name="edit_markdown">编辑Markdown笔记…</string>
    <string name="h6">H6</string>
    <string name="h5">H5</string>
    <string name="h4">H4</string>
    <string name="h3">H3</string>
    <string name="h2">H2</string>
    <string name="h1">H1</string>
    <string name="txt">TXT</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="goBack">返回</string>
    <string name="data">日期</string>
    <string name="markdown_note">Markdown Note</string>
    <string name="search">搜索</string>
    <string name="index">首页</string>
    <string name="my">我的</string>
    <string name="user_my">终端小队</string>
    <string name="id_my">ID:XXXXX</string>
    <string name="setup">设置</string>
    <string name="my_about_us">关于我们</string>
    <string name="my_vision">版本</string>
    <string name="id_str">id</string>
    <string name="start_search">开始你的搜索</string>
    <string name="markdown_note2">Markdown笔记</string>
</resources>