<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#696969"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/tv_item_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>

    <TextView
        android:id="@+id/tv_item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_str"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        />


</LinearLayout>
