<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@mipmap/user1"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_my"
                android:textSize="30sp"
                android:textColor="#000000"
                android:layout_marginTop="50dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <TextView
                    android:id="@+id/id_my"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_my"
                    android:textSize="20sp"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:background="#ffffff">
        <RelativeLayout
            android:id="@+id/vision_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/vision_ic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/vision" />

            <TextView
                android:id="@+id/vision_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/vision_ic"
                android:text="@string/my_vision"
                android:textColor="#000000"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@mipmap/to_right" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/about_us_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/about_us_ic"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/ours" />

            <TextView
                android:id="@+id/about_us_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/about_us_ic"
                android:text="@string/my_about_us"
                android:textColor="#000000"
                android:textSize="20sp" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:background="@mipmap/to_right"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"/>
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:background="@color/white"/>

    <RelativeLayout
        android:id="@+id/setup_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff">

        <ImageView
            android:id="@+id/setup_ic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/setup" />

        <TextView
            android:id="@+id/setup_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/setup_ic"
            android:text="@string/setup"
            android:textColor="#000000"
            android:textSize="20sp" />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:background="@mipmap/to_right"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"/>
    </RelativeLayout>

</LinearLayout>